--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 streamlit
-pandas
-scikit-learn
-altair
+google-generativeai
+python-dotenv
+langchain
+PyPDF2
+chromadb
+faiss-cpu
+langchain_google_genai
